BSB/force-app/main/default/objects/Structures_partenaires_du_projet__c/Structures_partenaires_du_projet__c.object-meta.xml
<CustomObject>
    <label>Structure partenaire du projet</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Nom de Structures partenaires du projet</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Structures partenaires du projet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>