BSB/force-app/main/default/objects/Structures_partenaires_du_projet__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Structures partenaires du projet</relationshipLabel>
    <relationshipName>Structures_partenaires_du_projet</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>