BSB/force-app/main/default/objects/Structures_partenaires_du_projet__c/fields/Projet__c.field-meta.xml
<CustomField>
    <fullName>Projet__c</fullName>
    <label>Projet</label>
    <referenceTo>Projet__c</referenceTo>
    <relationshipLabel>Structures partenaires du projet</relationshipLabel>
    <relationshipName>Structures_partenaires_du_projet</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>