BSB/force-app/main/default/objects/Structures_partenaires_du_projet__c/fields/Tech_ForceUpdate__c.field-meta.xml
<CustomField>
    <fullName>Tech_ForceUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_ForceUpdate</label>
    <type>Checkbox</type>
</CustomField>